# QuantTrade

./: .env.example  .gitignore  AGENTS.md  MANIFEST.json  Makefile  PROJECT_PLAN.md  README_START_HERE.md  docker-compose.dev.yml  make.cmd
.codex/: config.toml
.github/workflows/: ci.yml
TASKS/: A_ENVIRONMENT_BASELINE.md  B_ARCHITECTURE_BASELINE.md  C_MARKET.md  D_LEAN_BACKTEST.md  E_STRATEGY_PORTFOLIO.md  F_IBKR_PAPER.md  G_CONTROLLED_LIVE.md  H_FACTOR_RESEARCH.md  INDEX.md  I_MACHINE_LEARNING.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260702_0001_create_job_runs.py  20260702_0002_create_data_snapshots.py
backend/app/: __init__.py  main.py
backend/app/api/: README.md
backend/app/api/v1/: README.md  __init__.py  backtests.py  dependencies.py  market.py  router.py  system.py
backend/app/application/: README.md  backtests.py  broker_state_service.py  jobs.py  market_data.py
backend/app/contracts/: README.md  __init__.py  backtests.py  market.py  system.py
backend/app/core/: README.md  __init__.py  config.py  errors.py  logging.py  middleware.py  trace.py
backend/app/domains/: README.md  __init__.py  artifacts.py  backtest.py  broker.py  data_snapshots.py  indicators.py  jobs.py  market.py  source_identity.py
backend/app/infrastructure/: README.md  adjustment_factors.py  akshare_market_data.py  artifact_store.py  broker_state_mapping.py  cache.py  database.py  job_queue.py  market_snapshots.py  mock_backtest.py  models.py  source_identity.py
backend/app/workers/: README.md  __init__.py  celery_app.py
backend/tests/: test_akshare_market_data.py  test_api_smoke.py  test_backtest_api.py  test_broker_state_contract.py  test_cache_artifact_adapters.py  test_dependency_direction.py  test_jobs_and_mock_backtest.py  test_market_domain_contract.py  test_market_snapshots_and_indicators.py  test_migrations.py  test_parquet_roundtrip.py  test_source_identity.py  test_worker_config.py
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
infra/: README.md
lean/: README.md
scripts/: dev.py  export_openapi.py
templates/: BRANCH_TASK_TEMPLATE.md  PR_TEMPLATE.md
(+53 files in other folders)
