[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quanttrade-backend"
version = "0.1.0"
description = "QuantTrade backend baseline package."
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic>=1.13.0",
  "akshare>=1.16.0",
  "celery>=5.4.0",
  "fastapi>=0.115.0",
  "minio>=7.2.0",
  "psycopg[binary]>=3.2.0",
  "pyarrow>=16.0.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.13.0",
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "kombu", "kombu.*"]
ignore_missing_imports = true
